Add size attribute to order items and update related views

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,64 +1,5 @@
-/*!
- * Bootstrap v5.0.0-beta1 (https://getbootstrap.com/)
- * Copyright 2011-2020 The Bootstrap Authors
- * Copyright 2011-2020 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+/*
  */
-/*-----------------------------------------------*/
-/*------------------ Base Colors ----------------*/
-/*-----------------------------------------------*/
-/*-----------------------------------------------*/
-/*------------------ Typography -----------------*/
-/*-----------------------------------------------*/
-/*------------------ Page Title -----------------*/
-/*---------------- Section Title ----------------*/
-/*----------------- Block Title -----------------*/
-/*------------------ Tab Title ------------------*/
-/*----------------- Text content ----------------*/
-/*----------------- Blockquote ------------------*/
-/*------------------ List style -----------------*/
-/*-----------------------------------------------*/
-/*-------------------- Layout -------------------*/
-/*-----------------------------------------------*/
-/*-----------------------------------------------*/
-/*------------------ Compontents ----------------*/
-/*-----------------------------------------------*/
-/*-------------------- Table --------------------*/
-/*-------------------- Alert --------------------*/
-/*-------------------- Buttons --------------------*/
-/*---------------------- List ---------------------*/
-/*---------------------- Form ---------------------*/
-/*------------------ Accordions -----------------*/
-/*--------------------- Tabs --------------------*/
-/*----------------- Range Slider ----------------*/
-/*----------------- Progressbar -----------------*/
-/*-----------------------------------------------*/
-/*-------------------- Header -------------------*/
-/*-----------------------------------------------*/
-/*-----------------------------------------------*/
-/*--------------------- Menu --------------------*/
-/*-----------------------------------------------*/
-/*-----------------------------------------------*/
-/*-------------------- Footer -------------------*/
-/*-----------------------------------------------*/
-/*-----------------------------------------------*/
-/*----------------- Aside Popup -----------------*/
-/*-----------------------------------------------*/
-/*-----------------------------------------------*/
-/*-------------------- Modal --------------------*/
-/*-----------------------------------------------*/
-/*-----------------------------------------------*/
-/*----------------- Text content ----------------*/
-/*-----------------------------------------------*/
-/*-----------------------------------------------*/
-/*------------------- Swatches ------------------*/
-/*-----------------------------------------------*/
-/*-----------------------------------------------*/
-/*------------------- Rating Stars --------------*/
-/*-----------------------------------------------*/
-/*-----------------------------------------------*/
-/*------------------ Shop Checkout --------------*/
-/*-----------------------------------------------*/
 :root {
     --bs-blue: #0d6efd;
     --bs-indigo: #6610f2;
@@ -16217,7 +16158,7 @@ textarea.form-control.is-invalid {
     }
 }
 .header.header-transparent-bg:not(.header_sticky-active) {
-    background: transparent;
+    /* background: transparent; */
 }
 .header.header_dark {
     background-color: #222222;
