--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1673,13 +1673,13 @@ a:focus {
     background-color: #2377fc;
 }
 .block-legend .dot.t2 {
-    background-color: #d3e4fe;
+    background-color: #ffa500;
 }
 .block-legend .dot.t3 {
-    background-color: #ff5200;
+    background-color: #005f00;
 }
 .block-legend .dot.t4 {
-    background-color: #8f77f3;
+    background-color: #ff0000;
 }
 .block-legend .dot-1 {
     width: 38px;
