--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -161,3 +161,60 @@ body {
     width: 20px;
     margin: 0 auto;
 }
+
+/* Top customer & Popular Products */
+.customer-card {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid #ddd;
+    background: #fff;
+}
+.customer-card img {
+    width: 80px;
+    height: 80px;
+    border-radius: 20px;
+}
+.customer-info p {
+    font-size: 18px;
+    margin: 0;
+    font-weight: 600;
+    color: var(--Body-Text);
+    margin-bottom: 10px;
+}
+.customer-info small {
+    font-size: 16px;
+    color: var(--Heading);
+}
+
+.product-card {
+    border-radius: 10px;
+    border: 1px solid #ddd;
+    background: #fff;
+}
+
+.product-card img {
+    border-radius: 20px;
+    width: 100%;
+    height: 150px;
+    object-fit: contain;
+    padding: 10px 0;
+}
+
+.product-info .large-text {
+    font-size: 18px;
+    margin: 0;
+    font-weight: 600;
+    color: var(--Body-Text);
+    padding: 10px;
+    text-align: center;
+}
+
+.product-info .small-text {
+    font-size: 16px;
+    color: var(--Heading);
+    text-align: center;
+    padding-bottom: 10px;
+}
