--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -178,14 +178,14 @@ body {
     border-radius: 20px;
 }
 .customer-info p {
-    font-size: 18px;
+    font-size: 16px;
     margin: 0;
     font-weight: 600;
     color: var(--Body-Text);
     margin-bottom: 10px;
 }
 .customer-info small {
-    font-size: 16px;
+    font-size: 14px;
     color: var(--Heading);
 }
 
@@ -193,6 +193,9 @@ body {
     border-radius: 10px;
     border: 1px solid #ddd;
     background: #fff;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .product-card img {
@@ -204,7 +207,7 @@ body {
 }
 
 .product-info .large-text {
-    font-size: 18px;
+    font-size: 16px;
     margin: 0;
     font-weight: 600;
     color: var(--Body-Text);
@@ -213,7 +216,7 @@ body {
 }
 
 .product-info .small-text {
-    font-size: 16px;
+    font-size: 14px;
     color: var(--Heading);
     text-align: center;
     padding-bottom: 10px;
