--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -762,3 +762,60 @@
 #box-content-search .product-item {
     margin-bottom: 10px;
 }
+
+/* Popup Modal Styles */
+.popup-modal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    max-width: 800px;
+    display: flex;
+    gap: 20px;
+    position: relative;
+}
+
+.popup-left img {
+    max-width: 300px;
+    border-radius: 10px;
+}
+
+.popup-right {
+    flex-grow: 1;
+    text-align: left;
+}
+
+.close-btn {
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.popup-options button {
+    background-color: #f0f0f0;
+    border: none;
+    margin: 2px;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.popup-options button.active {
+    background-color: #004d40;
+    color: #fff;
+}
